new version of the HTML pages

--- a/survey/templates/information.html
+++ b/survey/templates/information.html
@@ -1,15 +1,22 @@
 {% extends "base.html"%}
 {% block content %}
 <div id="introduction-no-line">
+    <p>The goal of our research is to obtain an effort estimation model based
+on the data that can be extracted from versioning systems, such as git, Bazaar,
+Subversion or CVS. The research outputs could be of special interest for the
+Free/Open Source Software (FOSS) projects and industry.
+</p>
+
     <p>        
-Traditional software development effort estimation are used by companies in
+It has to be noted that in traditional (closed sourced) software developments,
+effort estimations are used by companies in
 the early phases of a project to estimate the number of developers and the 
 amount of time that a project will require. Once the project is over, the
 company should know the actual effort it has devoted, and no estimation is required.
 </p>
 
 <p>
-In Free/Open Source Software (FOSS) projects, where volunteer developers may
+In FOSS projects, where volunteer developers may
 co-operate with professional developers from several companies, the total
 amount of effort invested in the project is usually not known even after the
 development has been done. Companies involved in FOSS are usually aware of the
@@ -23,9 +30,8 @@ In this research we mine software versioning system data to quantify the actual 
 provided by the contributors of several FOSS
 projects, in order to produce an ex-post evaluation of the applied effort. We
 propose several approaches to quantify the effort based on the data obtained
-and apply it to several FOSS projects. We compare the
-observed effort to validate the effort estimated by traditional effort 
-estimation models.
+and apply it to several FOSS projects. With this survey, we want to compare the
+effort as provided by developers to validate the effort estimated with our approach.
 </p>
 
 </div>
