new version of the HTML pages

--- a/survey/templates/contact.html
+++ b/survey/templates/contact.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction-no-line">
           <p>
-             You can contact the research team by email at <strong>c.cervigon at alumnos.urjc.es</strong>
+             You can contact the research team by email at <strong>c.cervigon at libresoft.es</strong>
              or (if available) in the IRC on Freenode in the  #libresoft channel
              (you can use the <a href="https://webchat.freenode.net/">Freenode web interface</a> as well).
           </p>
@@ -19,7 +19,7 @@
           <p>
              Especifically, in charge of this survey are following persons:
              <ul>
-               <li><a href="http://es.linkedin.com/in/carloscervigonavila‎">Carlos Cervigón Ávila</a> (ccervigon on freenode)</li>
+               <li><a href="http://www.linkedin.com/in/carloscervigonavila">Carlos Cervigón Ávila</a> (ccervigon on freenode)</li>
                <li><a href="http://gsyc.es/~grex">Gregorio Robles</a> (grex_ on freenode)</li>
                <li><a href="http://www.brunel.ac.uk/siscm/disc/people-in-disc/academic-staff/dr-andrea-capiluppi">Andrea Capiluppi</a></li>
              </ul>
