--- a/survey/templates/login.html
+++ b/survey/templates/login.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction">
     <p>
-        Welcome to our effort estimation survey. We thank you in advance for your participation.
+        Welcome to our effort estimation survey.<br>We thank you in advance for your participation.
     </p>
 </div>
 <div id="error">
@@ -16,15 +16,14 @@
     </form>
 <br/>
 <p>
- The survey consist of 6 quick questions. It should
-take you around 2-3 minutes to answer it.
+    The survey consist of 6 quick questions. It should
+    take you around 2-3 minutes to answer it.
 </p>
 <p>
-  This survey has been launched by researchers from the Universidad Rey Juan Carlos (Spain) 
-and Brunel University (UK) in order to validate their effort estimation models for 
-Free/Open Source Software projects. Your input and feedback is much appreciated.
-Please, see the <a href="information.html">information page</a> for more information.
-</p>
+    This survey has been launched by researchers from the Universidad Rey Juan Carlos (Spain) 
+    and Brunel University (UK) in order to validate their effort estimation models for 
+    Free/Open Source Software projects. Your input and feedback is much appreciated.
+    Please, see the <a href="information.html">information page</a> for more information.
 </p>
 
 </div>
