new version of the HTML pages

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -6,7 +6,7 @@
 <form action="/survey2" method="post">
 {% endif %}
     <p>
-        <label for="id_resp1">On average, how many hours in a week do you spend in the project?<br /></label>
+        <label for="id_resp1">On average, how many hours in a week have you spend in the project in the last six months?<br /></label>
         <select id="id_resp1" name="resp1">
             <option selected value="None">Choose one option</option>
             <option value=">40">More than 40h</option>
@@ -19,7 +19,7 @@
         </select>
     </p>
     <p>
-        <label for="id_resp2"> How much of the time you spent in the project is coding?<br /></label>
+        <label for="id_resp2">How much of the time you spent in the project is devoted to coding?<br /></label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
             <option value="100">Approx. 100%</option>
