--- a/survey/templates/thanks.html
+++ b/survey/templates/thanks.html
@@ -1,6 +1,11 @@
 {% extends "base.html"%}
 {% block content %}
 <div id="thanks">
-    Thank you!!! Your responses have been saved.
+    <p>
+    Thank you for your participation!
+    </p>
+    <p>
+    If you have any comments or feedback on the survey or our research, please <a href="contact">contact us</a>.
+    </p>
 </div>
 {% endblock%}
