new version of the HTML pages

--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -14,7 +14,7 @@
                     <img alt="LibreSoft Group" width="200px" src="{{ STATIC_URL }}img/logo-libresoft.png"/>
                 </a>
                 <div id="title">
-                    <h2>Short survey to tune up Effort Estimation Model for FOSS</h2>
+                    <h2>Short survey to tune up Effort Estimation Model for FLOSS</h2>
                 </div>
                 <hr>
             </div>
