new version of the HTML pages

--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -4,7 +4,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="robots" content="index, follow"/>
     <link rel="stylesheet" media="all" href="{{ STATIC_URL }}css/main.css" type="text/css"/>
-    <title>Short survey to tune up an Effort Estimation Model for Free/Libre/Open Source Software</title>
+    <title>Short survey to tune up Effort Estimation Model for Free/Open Source Software</title>
 </head>
 <body>
     <div id="wrapper">
