--- a/survey/templates/information.html
+++ b/survey/templates/information.html
@@ -4,7 +4,7 @@
     <p>The goal of our research is to obtain an effort estimation model based
 on the data that can be extracted from versioning systems, such as git, Bazaar,
 Subversion or CVS. The research outputs could be of special interest for the
-Free/Open Source Software (FOSS) projects and industry.
+Free/Libre/Open Source Software (FLOSS) projects and industry.
 </p>
 
     <p>        
@@ -16,10 +16,10 @@ company should know the actual effort it has devoted, and no estimation is requi
 </p>
 
 <p>
-In FOSS projects, where volunteer developers may
+In FLOSS projects, where volunteer developers may
 co-operate with professional developers from several companies, the total
 amount of effort invested in the project is usually not known even after the
-development has been done. Companies involved in FOSS are usually aware of the
+development has been done. Companies involved in FLOSS are usually aware of the
 effort they put into the projects, but have difficulties in knowing the effort
 by the rest of the community, including the other companies that collaborate
 on the project.
@@ -27,10 +27,10 @@ on the project.
 
 <p>
 In this research we mine software versioning system data to quantify the actual effort 
-provided by the contributors of several FOSS
+provided by the contributors of several FLOSS
 projects, in order to produce an ex-post evaluation of the applied effort. We
 propose several approaches to quantify the effort based on the data obtained
-and apply it to several FOSS projects. With this survey, we want to compare the
+and apply it to several FLOSS projects. With this survey, we want to compare the
 effort as provided by developers to validate the effort estimated with our approach.
 </p>
 
