new version of the HTML pages

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -49,7 +49,7 @@
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">Would you like to receive further information on the results of our research?</label>
+        <label for="id_info">Would you like to receive the results of our research?</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
