new version of the HTML pages

--- a/survey/templates/survey2.html
+++ b/survey/templates/survey2.html
@@ -5,8 +5,8 @@
         <label for="id_resp4">What do you consider yourself in the project?<br /></label>
         <select id="id_resp4" name="resp4">
             <option selected value="None">Choose one option</option>
-            <option value="full">Full-time professional</option>
-            <option value="part">Part-time professional</option>
+            <option value="full">Full-time contributor</option>
+            <option value="part">Part-time contributor</option>
             <option value="occasional">Occasional contributor</option>
         </select>
     </p>
