--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -45,6 +45,15 @@
     </p>
     {% if flag_info %}
     <p>
+        <label for="id_resp4">What do you consider yourself in the project?<br /></label>
+        <select id="id_resp4" name="resp4">
+            <option selected value="None">Choose one option</option>
+            <option value="full">Full-time contributor</option>
+            <option value="part">Part-time contributor</option>
+            <option value="occasional">Occasional contributor</option>
+        </select>
+    </p>
+    <p>
         <label for="id_resp5"> Did you always work the same hours in the project, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases using the graph below?<br /></label>
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
