new version of the HTML pages

--- a/survey/templates/contact.html
+++ b/survey/templates/contact.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction-no-line">
           <p>
-             You can contact the research team by email at <strong>c.cervigon at libresoft.es</strong>
+             You can contact the research team by email at <strong>ccervigon at libresoft.es</strong>
              or (if available) in the IRC on Freenode in the  #libresoft channel
              (you can use the <a href="https://webchat.freenode.net/">Freenode web interface</a> as well).
           </p>
