new version of the HTML pages

--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -41,6 +41,12 @@
                         Site design released under the <a href="http://www.gnu.org/licenses/agpl.html">GNU AGPLv3</a>.
                     </p>
                 </div>
+                <a href="http://www.urjc.es/">
+                    <img alt="Universidad Rey Juan Carlos" height="60px" src="{{ STATIC_URL }}img/logo-urjc.png"/>
+                </a>
+                <a href="http://www.brunel.ac.uk/">
+                    <img alt="Brunel University" height="60px" src="{{ STATIC_URL }}img/brunel.jpg"/>
+                </a>
             </div>
         </div>
     </div>
