--- a/survey/templates/contact.html
+++ b/survey/templates/contact.html
@@ -4,7 +4,7 @@
           <p>
              You can contact the research team by email at <strong>ccervigon at libresoft.es</strong>
              or (if available) in the IRC on Freenode in the  #libresoft channel
-             (you can use the <a href="https://webchat.freenode.net/">Freenode web interface</a> as well).
+             (you can use the <a href="https://webchat.freenode.net/?channels=#libresoft">Freenode web interface</a> as well).
           </p>
 
           <p>
