new version of the HTML pages

--- a/survey/templates/login.html
+++ b/survey/templates/login.html
@@ -23,7 +23,7 @@
     This survey has been launched by researchers from the Universidad Rey Juan Carlos (Spain) 
     and Brunel University (UK) in order to validate their effort estimation models for 
     Free/Open Source Software projects. Your input and feedback is much appreciated.
-    Please, see the <a href="information.html">information page</a> for more information.
+    Please, see the <a href="info">information page</a> for more information.
 </p>
 
 </div>
