--- a/survey/templates/privacy.html
+++ b/survey/templates/privacy.html
@@ -1,6 +1,14 @@
 {% extends "base.html"%}
 {% block content %}
 <div id="introduction-no-line">
-Privacy!
+    <p>
+       Your privacy concerns us:
+      <ul>
+        <li> All data from this survey (and in general, all data used for this research) will be used exclusively for research purposes.</li>
+        <li> Data obtained from this survey will not be released to any third party.</li>
+        <li> Results, reports and other information obtained from this survey (and in general, all data used in this research) will always be offered in a way that privacy is preserved (i.e., results will be offered in an aggregated or, if needed, in an anonymous ways). Names and e-mail addresses will not be mentioned. </li>
+        <li> The data obtained by means of the survey will be matched with the data obtained from the mining version repositories internally at the universities where the researchers work (Universidad Rey Juan Carlos and Brunel University).</li>
+      </ul>
+    </p>
 </div>
 {% endblock%}
