adding privacy statements

--- a/survey/templates/privacy.html
+++ b/survey/templates/privacy.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction-no-line">
     <p>
-       Your privacy concerns us:
+       We are concerned about your privacy. That is why you have our following commitments:
       <ul>
         <li> All data from this survey (and in general, all data used for this research) will be used exclusively for research purposes.</li>
         <li> Data obtained from this survey will not be released to any third party.</li>
