new version of the HTML pages

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -62,7 +62,7 @@
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
-    {% if flag_info %}
+    {% if survey == 1 %}
         <input type="submit" value="Submit" class="submit_button" />
     {% else %}
         <input type="submit" value="Next Page (2/2)" class="submit_button" />
