adding privacy statements

--- a/survey/templates/privacy.html
+++ b/survey/templates/privacy.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction-no-line">
     <p>
-       We are concerned about your privacy. That is why you have our following commitments:
+       We are concerned about your privacy. That is why we commit to the following:
       <ul>
         <li> All data from this survey (and in general, all data used for this research) will be used exclusively for research purposes.</li>
         <li> Results, reports and other information obtained from this survey (and in general, all data used in this research) will always be offered in a way that privacy is preserved (i.e., results will be offered in an aggregated or, if needed, in an anonymous way). Names and e-mail addresses will not be mentioned. </li>
