new version of the HTML pages

--- a/survey/templates/login.html
+++ b/survey/templates/login.html
@@ -16,7 +16,7 @@
     </form>
 <br/>
 <p>
-    The survey consist of 6 quick questions. It should
+    The survey consists of 6 quick questions. It should
     take you around 2-3 minutes to answer it.
 </p>
 <p>
