new version of the HTML pages

--- a/survey/templates/information.html
+++ b/survey/templates/information.html
@@ -2,7 +2,7 @@
 {% block content %}
 <div id="introduction-no-line">
     <p>The goal of our research is to obtain an effort estimation model based
-on the data that can be extracted from versioning systems, such as git, Bazaar,
+on the data that can be extracted from versioning systems, such as Git, Bazaar,
 Subversion or CVS. The research outputs could be of special interest for the
 Free/Libre/Open Source Software (FLOSS) projects and industry.
 </p>
