changes to some questions, to the images,e tc.

--- a/survey/templates/privacy.html
+++ b/survey/templates/privacy.html
@@ -4,10 +4,10 @@
     <p>
        We are concerned about your privacy. That is why we commit to the following:
       <ul>
-        <li> All data from this survey (and in general, all data used for this research) will be used exclusively for research purposes.</li>
-        <li> Results, reports and other information obtained from this survey (and in general, all data used in this research) will always be offered in a way that privacy is preserved (i.e., results will be offered in an aggregated or, if needed, in an anonymous way). Names and e-mail addresses will not be mentioned. </li>
-        <li> The data obtained by means of the survey will be matched with the data obtained from the mining version repositories internally at the universities where the researchers work (Universidad Rey Juan Carlos and Brunel University).</li>
-        <li> Data obtained from this survey will not be released, nor given to any third party.</li>   
+        <li> All data from this survey (and in general, all data used for this research) will be used <b>exclusively for research purposes</b>.</li>
+        <li> Results, reports and other information resulting from this survey will always be offered in a way that <b>privacy is preserved</b> (i.e., results will be offered in an aggregated or, if needed, in an anonymous way). Names and e-mail addresses will not be mentioned. </li>
+        <li> The data obtained with the survey will be matched <b>internally</b> with the data from the mining version repositories at the universities where the researchers work (Universidad Rey Juan Carlos and Brunel University).</li>
+        <li> The survey data <b>will not be released</b>, nor given to any third party.</li>   
       </ul>
     </p>
 </div>
