--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -54,11 +54,11 @@
         </select>
     </p>
     <p>
-        <label for="id_resp5"> Did you always work the same hours in the project, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases using the graph below?<br /></label>
+        <label for="id_resp5"> Did you always work on the project the same amount of hours, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases (the graph below may help you as it gives your recorded activity in the repository)?<br /></label>
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">Would you like to receive the results of our research?</label>
+        <label for="id_info">I would like to receive the results of our research:</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
