--- a/survey/templates/thanks.html
+++ b/survey/templates/thanks.html
@@ -5,7 +5,7 @@
     Thank you for your participation!
     </p>
     <p>
-    If you have any comments or feedback on the survey or our research, please <a href="contact">contact us</a>.
+    If you have any comments or feedback<br/>on the survey or our research,<br/>please <a href="contact">contact us</a>.
     </p>
 </div>
 {% endblock%}
