--- a/survey/static/css/main.css
+++ b/survey/static/css/main.css
@@ -253,7 +253,7 @@ a.button {
     margin: 1em auto;
     font-size: 35px;
     text-align: center;
-    color: #11EE14; /* old: #1411EF; */
+    color: #04AE45; /* old: #1411EF; */
 }
 
 /**
@@ -273,7 +273,7 @@ a.button {
   margin-top: 0em;
   padding-right:6em;
   width: 70%;
-  color: #11EE14; /* old: #1411EF; */
+  color: #04AE45; /* old: #1411EF; */
   font-family: Cambria, "Hoefler Text", "Liberation Serif", Times, "Times New Roman", serif;
   text-align: center;
   font-size: 110%;
