making question easier

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -23,15 +23,10 @@
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
             <option value="100">Approx. 100%</option>
-            <option value="90">Around 90%</option>
             <option value="80">Around 80%</option>
-            <option value="70">Around 70%</option>
             <option value="60">Around 60%</option>
-            <option value="50">Around 50%</option>
             <option value="40">Around 40%</option>
-            <option value="30">Around 30%</option>
             <option value="20">Around 20%</option>
-            <option value="10">Around 10%</option>
             <option value="<10">Less than 10%</option>
         </select>
     </p>
@@ -54,7 +49,7 @@
         </select>
     </p>
     <p>
-        <label for="id_resp5"> Did you always work on the project the same amount of hours, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases (the graph below may help you as it gives your recorded activity in the repository)?<br /></label>
+        <label for="id_resp5">Did you always work on the project the same amount of hours, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases? (the graph below may help you, as it is based in your recorded activity in the repository)<br /></label>
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
