--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -44,7 +44,7 @@
                 </div>
                 <div id="images">
                   <a href="http://www.urjc.es/">
-                      <img alt="Universidad Rey Juan Carlos" height="60px" src="{{ STATIC_URL }}img/logo-urjc.png"/> -->
+                      <img alt="Universidad Rey Juan Carlos" height="60px" src="{{ STATIC_URL }}img/logo-urjc.png"/>
                   </a>
                   <a href="http://www.brunel.ac.uk/">
                       <img alt="Brunel University" height="60px" src="{{ STATIC_URL }}img/brunel.jpg"/>
