making question easier

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -22,7 +22,7 @@
         <label for="id_resp2">How much of the time you spent in the project is devoted to coding?<br /></label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
-            <option value="100">Approx. 100%</option>
+            <option value="100">Over 90%</option>
             <option value="80">Around 80%</option>
             <option value="60">Around 60%</option>
             <option value="40">Around 40%</option>
