better with quartiles

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -22,7 +22,7 @@
         <label for="id_resp2">How much of the time you spent in the project is devoted to coding?<br /></label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
-            <option value="100">Over 90%</option>
+            <option value=">90">Over 90%</option>
             <option value="75">Around 75%</option>
             <option value="50">Around 50%</option>
             <option value="25">Around 25%</option>
