--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -52,14 +52,14 @@
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">I would like to receive the results of our research:</label>
+        <label for="id_info">I would like to receive the results of this research:</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     {% endif %}
     {% if survey == 1 %}
         <input type="submit" value="Submit" class="submit_button" />
     {% else %}
-        <input type="submit" value="Next Page (2/2)" class="submit_button" />
+        <input type="submit" value="Next Page (1/2)" class="submit_button" />
     {% endif %}
 </form>
 {% if flag_fig %}
