--- a/survey/templates/survey2.html
+++ b/survey/templates/survey2.html
@@ -11,11 +11,11 @@
         </select>
     </p>
     <p>
-        <label for="id_resp5">Did you always work on the project the same amount of hours, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases (the graph below may help you as it gives your recorded activity in the repository)?<br /></label>
+        <label for="id_resp5">Did you always work on the project the same amount of hours, or did you have different phases of commitment? If you had different phases, could you tell us about the various phases? (the graph below may help you, as it is based in your recorded activity in the repository)<br /></label>
         <textarea id="id_resp5" name="resp5" rows="4" cols="60"></textarea>
     </p>
     <p>
-        <label for="id_info">I would like to receive the results of our research:</label>
+        <label for="id_info">I would like to receive the results of this research:</label>
         <input id="id_info" name="info" type="checkbox" />
     </p>
     <input type="submit" value="Submit" class="submit_button" />
