--- a/survey/templates/contact.html
+++ b/survey/templates/contact.html
@@ -1,5 +1,6 @@
 {% extends "base.html"%}
 {% block content %}
+<h1 id="content_head">About / Contact</h1>
 <div id="introduction-no-line">
           <p>
              You can contact the research team by email at <strong>ccervigon at libresoft.es</strong>
