--- a/survey/templates/privacy.html
+++ b/survey/templates/privacy.html
@@ -1,5 +1,6 @@
 {% extends "base.html"%}
 {% block content %}
+<h1 id="content_head">Privacy</h1>
 <div id="introduction-no-line">
     <p>
        We are concerned about your privacy. That is why we commit to the following:
