--- a/survey/templates/information.html
+++ b/survey/templates/information.html
@@ -1,5 +1,6 @@
 {% extends "base.html"%}
 {% block content %}
+<h1 id="content_head">Information</h1>
 <div id="introduction-no-line">
     <p>The goal of our research is to obtain an effort estimation model based
 on the data that can be extracted from versioning systems, such as Git, Bazaar,
