new version of the CSS pages

--- a/survey/static/css/main.css
+++ b/survey/static/css/main.css
@@ -253,7 +253,7 @@ a.button {
     margin: 1em auto;
     font-size: 35px;
     text-align: center;
-    color: #04AE45; /* old: #1411EF; */
+    color: #0100C0;
 }
 
 /**
