--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -9,24 +9,24 @@
         <label for="id_resp1">On average, how many hours in a week have you spend in the project in the last six months?<br /></label>
         <select id="id_resp1" name="resp1">
             <option selected value="None">Choose one option</option>
-            <option value=">40">More than 40h</option>
+            <option value="45">More than 40h</option>
             <option value="40">Around 40h</option>
             <option value="30">Around 30h</option>
             <option value="20">Around 20h</option>
             <option value="10">Around 10h</option>
             <option value="7">Around 7h</option>
-            <option value="<5">Less than 5h</option>
+            <option value="3">Less than 5h</option>
         </select>
     </p>
     <p>
         <label for="id_resp2">How much of the time you spent in the project is devoted to coding?<br /></label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
-            <option value=">90">Over 90%</option>
+            <option value="95">Over 90%</option>
             <option value="75">Around 75%</option>
             <option value="50">Around 50%</option>
             <option value="25">Around 25%</option>
-            <option value="<10">Less than 10%</option>
+            <option value="5">Less than 10%</option>
         </select>
     </p>
     <p>
