--- a/survey/templates/survey2.html
+++ b/survey/templates/survey2.html
@@ -1,5 +1,10 @@
 {% extends "base.html"%}
 {% block content %}
+<div id="introduction">
+    <p>
+        Project: {{ project }}
+    </p>
+</div>
 <form action="/survey2" method="post">
     <p>
         <label for="id_resp4">What do you consider yourself in the project?<br /></label>
