OpenStack survey results added on the website.

--- a/survey/templates/base.html
+++ b/survey/templates/base.html
@@ -24,6 +24,7 @@
                         <li class="libresoft"><a href="/">Home</a>
                             <ul>
                                 <li><a href="/info">Information</a></li>
+                                <li><a href="/result">OpenStack Survey Results</a></li>
                                 <li><a href="/privacy">Privacy</a></li>
                                 <li><a href="/contact">About / Contact</a></li>
                             </ul>
