--- a/survey/templates/result.html
+++ b/survey/templates/result.html
@@ -1,8 +1,9 @@
 {% extends "base.html"%}
 {% block content %}
-<div id="introduction-no-line">
+<div id="introduction">
     <p>
-        Coming soon!
+        Highlight about the OpenStack survey.
     </p>
+    <iframe src="http://www.slideshare.net/slideshow/embed_code/32585816" width="615" height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 </div>
 {% endblock%}
