Minor changes in the website.

--- a/survey/templates/information.html
+++ b/survey/templates/information.html
@@ -2,6 +2,9 @@
 {% block content %}
 <h1 id="content_head">Information</h1>
 <div id="introduction-no-line">
+    <p>We have already studied OpenStack with our methodology. Have a look at the
+<a href="/result">preliminary results</a>.</p>
+
     <p>The goal of our research is to obtain an effort estimation model based
 on the data that can be extracted from versioning systems, such as Git, Bazaar,
 Subversion or CVS. The research outputs could be of special interest for the
