--- a/survey/templates/result.html
+++ b/survey/templates/result.html
@@ -4,6 +4,9 @@
     <p>
         Highlight about the OpenStack survey.
     </p>
+    <p>
+        We have already studied OpenStack with our methodology. Have a look at the preliminary results:
+    </p>
     <iframe src="http://www.slideshare.net/slideshow/embed_code/32585816" width="615" height="500" frameborder="0" marginwidth="0" marginheight="0" scrolling="no"></iframe>
 </div>
 {% endblock%}
