Minor changes in the website.

--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -24,7 +24,7 @@
         </select>
     </p>
     <p>
-        <label for="id_resp2">How much of the time you spend in the project is devoted to development?
+        <label for="id_resp2">How much of the time you spend in the project is devoted to development?<br />
                               (understand "development" in the broad sense: including design, discussion, debugging, reading/writing code...)<br /> </label>
         <select id="id_resp2" name="resp2">
             <option selected value="None">Choose one option</option>
